Items align fixed

--- a/style.css
+++ b/style.css
@@ -79,24 +79,25 @@ main p{
     font-size: 17px;
 }
 .main-container{
-    
-    flex-direction: column;
-    text-align: center;
-    
+    max-width: 1440px;
+    margin: 0 auto;
+}
+img{
+    display: block;
+    max-width: 100%;
+    margin: auto;
 }
 .image-section{
-    margin-bottom: 25px;
+    margin-bottom: 32px;
 }
 .info-section{
     background-color: var(--cor-fundo);
-    max-width: 1344px;
-    min-width: 550;
-    margin: auto;
-    margin-bottom: 25px;
+    margin-bottom: 32px;
     padding: 32px 48px;
 }
 
 .info-align p{
+    text-align: center;
     max-width: 800px;
     min-width: 320px;
 }
@@ -115,6 +116,23 @@ main p{
 .saiba-mais a{
     color: var(--cor2);
 }
+.product-section{
+    margin-bottom: 32px;
+    display: flex;
+    justify-content: space-between;
+}
+.product-align{
+    flex-grow: 1;
+    background-color: var(--cor-fundo);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 48px;
+}
+.text-product h1{
+    margin-bottom: 24px;
+}
+
 
 
 
